Do not care about register in package name.
Signed-off-by: Andrei Stepanov <astepano@redhat.com>

--- a/stat.j2
+++ b/stat.j2
@@ -19,7 +19,7 @@ Page was updated on: {{updated}} UTC
 ! scope="col" | container
 ! scope="col" | atomic
 |-
-! style="text-align:left; font-weight: lighter;" scope="row" | Total know packages
+! style="text-align:left; font-weight: lighter;" scope="row" | Total known packages
 | style="text-align:center;" scope="row" colspan="9" | {{total.known}}
 |-
 ! style="text-align:left; font-weight: lighter;" scope="row" | Packages in category
